Fixed resource name scaling on mobile layouts.

--- a/app/shared/resource-card/_resource-card.scss
+++ b/app/shared/resource-card/_resource-card.scss
@@ -70,7 +70,7 @@ $cellHeight: 50%;
     margin-top: 0;
     margin-bottom: 0;
     @media screen and (max-width: $screen-xs-min) {
-      font-size: 1rem;
+      font-size: 1em;
       line-height: 1;
     }
   }
